--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# ds
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bootpbx?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
@@ -12,6 +13,13 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 
+# jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jackson.serialization.indent-output=true
+
+# freeswitch
+freeswitch.esl.host=127.0.0.1
+freeswitch.esl.port=8021
+freeswitch.esl.password=ClueCon
+freeswitch.esl.timout=10
