BP-004:modify a word

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.jackson.serialization.indent-output=true
 freeswitch.esl.host=127.0.0.1
 freeswitch.esl.port=8021
 freeswitch.esl.password=ClueCon
-freeswitch.esl.timout=10
+freeswitch.esl.timeout=10
