--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -16,8 +16,8 @@
       "description": "Description for freeswitch.esl.password."
     },
     {
-      "name": "freeswitch.esl.timout",
+      "name": "freeswitch.esl.timeout",
       "type": "java.lang.Integer",
-      "description": "Description for freeswitch.esl.timout."
+      "description": "Description for freeswitch.esl.timeout."
     }
   ] }
