--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 	compile 'io.netty:netty-all:4.1.17.Final'
 	compile 'com.google.guava:guava:23.4-jre'
 	compile 'org.slf4j:slf4j-api:1.7.25'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
 	runtime 'ch.qos.logback:logback-classic:1.2.3'
 	testCompile 'junit:junit:4.8.1'
 
